--- a/views/estate_menus.xml
+++ b/views/estate_menus.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0"?>
 <odoo>
     <menuitem id="estate_menu_root" name="Estate">
-        <menuitem id="estate_first_level_menu" name="Estate First Level">
+        <menuitem id="estate_advertisement_menu" name="Advertisement">
             <menuitem id="estate_model_menu_action" action="estate_model_action"/>
         </menuitem>
     </menuitem>
+
+    <menuitem id="estate_menu_root" name="Estate">
+        <menuitem id="estate_settings_menu" name="Settings">
+            <menuitem id="estate_property_type_model_menu_action" action="estate_property_type_model_action"/>
+        </menuitem>
+    </menuitem>
+
+    
 </odoo>
