--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -41,6 +41,7 @@
                         <group>
                             <field name="postcode"/>
                             <field name="expected_price"/>
+                            <field name="property_type"/>
                         </group>
                         <group>
                             <field name="date_availability" string="Available From"/>
@@ -58,6 +59,12 @@
                                 <field name="garden"/>
                                 <field name="garden_area" string="Graden Area (sqm)"/>
                                 <field name="garden_orientation"/>
+                            </group>
+                        </page>
+                        <page string="Other Info">
+                            <group>
+                                <field name="salesperson" />
+                                <field name="buyer" />
                             </group>
                         </page>
                     </notebook>
