--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -36,7 +36,7 @@
                     <h1>
                         <field name="name"  placeholder="Property Title"/>
                     </h1>
-                    
+                    <field name="tag_ids" widget="many2many_tags"/>
                     <group>
                         <group>
                             <field name="postcode"/>
