--- a/views/estate_property_offer_views.xml
+++ b/views/estate_property_offer_views.xml
@@ -8,7 +8,9 @@
         <field name="arch" type='xml'>
             <tree string="Estate Property Offer">
                 <field name="price"/>
-                <field name="partner_id" />
+                <field name="validity" string="Validity (Days)" />
+                <field name="date_deadline" string="Deadline" />
+                <field name="partner_id"/>
                 <field name="status"/>
             </tree>
         </field>
@@ -24,6 +26,8 @@
                 <sheet>
                     <group>
                         <field name="price"/>
+                        <field name="validity" string="Validity (Days)"/>
+                        <field name="date_deadline" string="Deadline" />
                         <field name="partner_id"/>
                         <field name="status"/>
                     </group>
