--- a/views/estate_property_offer_views.xml
+++ b/views/estate_property_offer_views.xml
@@ -12,6 +12,8 @@
                 <field name="date_deadline" string="Deadline" />
                 <field name="partner_id"/>
                 <field name="status"/>
+                <button name="action_accept" type="object" icon="fa-check"/>
+                <button name="action_refuse" type="object" icon="fa-times"/>
             </tree>
         </field>
     </record>
@@ -29,7 +31,6 @@
                         <field name="validity" string="Validity (Days)"/>
                         <field name="date_deadline" string="Deadline" />
                         <field name="partner_id"/>
-                        <field name="status"/>
                     </group>
                 </sheet>
             </form>
