--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -32,6 +32,11 @@
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form string="Property">
+                <header>
+                    <button name="action_sold" type="object" string="Sold"/>
+                    <button name="action_cancelled" type="object" string="Cancelled"/>
+                    
+                </header>
                 <sheet>
                     <h1>
                         <field name="name"  placeholder="Property Title"/>
@@ -39,6 +44,7 @@
                     <field name="tag_ids" widget="many2many_tags"/>
                     <group>
                         <group>
+                            <field name="state" string="Status"/>
                             <field name="property_type"/>
                             <field name="postcode"/>
                             <field name="date_availability" string="Available From"/>
